<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_et"
            android:layout_width="@dimen/edittext_default_width"
            android:layout_height="@dimen/edittext_default_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/register_username_hint" />

        <AutoCompleteTextView
            android:id="@+id/email_et"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/register_email_hint"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="@dimen/edittext_default_width"
            android:layout_height="@dimen/edittext_default_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:hint="@string/login_password_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password_confirm_et"
            android:layout_width="@dimen/edittext_default_width"
            android:layout_height="@dimen/edittext_default_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:hint="@string/register_password_confirm_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/register_bt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bt_launcher_shape"
            android:textColor="@color/white"
            android:text="@string/register_bt_text" />
    </LinearLayout>


</LinearLayout>