<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_iv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher_round" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="@dimen/edittext_default_width"
                android:layout_height="@dimen/edittext_default_height"
                android:layout_marginTop="25dp"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/login_username_hint" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="@dimen/edittext_default_width"
                android:layout_height="@dimen/edittext_default_height"
                android:layout_marginTop="10dp"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_bt"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_tab_sport_button"
                android:textColor="@color/white"
                android:text="@string/login_bt_text"
                />

            <Button
                android:id="@+id/register_bt"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_tab_white_button"
                android:textColor="@color/sport_button_normal"
                android:text="@string/to_register_bt_text" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>